syntax = "proto3";

package reaccion;

option java_package = "com.example.aplicacionteamexo.grpc";
option java_multiple_files = true;

service ReaccionService {
  rpc StreamReacciones(ReaccionFiltro) returns (stream ReaccionNotificacion);
}

message ReaccionFiltro {
  int32 publicacionId = 1;
}

message ReaccionNotificacion {
  string tipo = 1;
  int32 usuarioId = 2;
  int32 publicacionId = 3;
  string nombreUsuario = 4;
}
